# local_db

./: .gitignore  README.md  batch_upload.sh  docker-compose.yml  historical_data_generator.sh  oly_enrich.csv  olympics.json  olympics_enrichment.vrl  olympics_enrichment2.vrl
anomaly_test/: 01_create_configs.sh  02_list_configs.sh  03_train_all.sh  04_wait_for_training.sh  05_run_detection.sh  06_query_anomalies_stream.sh  07_inject_and_detect.sh  08_check_stream_exists.sh  09_delete_all_configs.sh  DEMO.md  README.md  anomaly_detection_design.md  config.sh  config_ids.env  config_ids.fish
data_generator/: Cargo.toml
data_generator/src/: main.rs
data_loader_js/: main.js
debug_env/: main_connections.sh  monitor_connections.sh
debug_env/pod_monitor/: .gitignore
k8s_data_gen/: Cargo.toml  Makefile  README.md
k8s_data_gen/src/: anomaly.rs  config.rs  corr.rs  histogram_edge_sim.rs  ingest.rs  main.rs  repro.rs  topology.rs  utils.rs
k8s_data_gen/src/client/: grpc.rs  http.rs
k8s_data_gen/src/logs/: generate.rs  historical.rs  live.rs  mod.rs  types.rs
k8s_data_gen/src/metrics/: generate.rs  historical.rs  live.rs  mod.rs  otlp.rs  types.rs
k8s_data_gen/src/traces/: flows.rs  generate.rs  historical.rs  live.rs  mod.rs  otlp.rs  types.rs
k8s_scripts/: clear_cache.sh
live_ingest/: Cargo.toml  README.md
live_ingest/src/: main.rs
ttv-reader/: Cargo.toml
ttv-reader/src/: main.rs
