[package]
name = "live_ingest"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.11", features = ["v4"] }
chrono = "0.4"
rand = "0.8"
